Configurator spreadsheet ID bugfix PlayerHUD

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -32,6 +32,10 @@
             <div class="target" id="assists"></div>
             <div class="target" id="saves"></div>
             <div class="target" id="shots"></div>
+            <div class="boostmeter">
+                <div class="target" id="boost"></div>
+                <div class="target" id="speed"></div>
+            </div>
             <div class="additionalhud">
                 <div class="target" id="score"></div>
                 <div class="target" id="demos"></div>
