--- a/public/overlay.html
+++ b/public/overlay.html
@@ -53,6 +53,7 @@
     <div class="overlay" id="postgame">
         <h1>Postgame-Overlay</h1>
     </div>
+    <div class="dev"></div>
     <script defer src="https://apis.google.com/js/api.js"></script>
     <script defer src="/js/websocketsubscriber.js"></script>
     <script defer src="/js/configurator.js"></script>
